changed return type of storage operation in all repositories to void